; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_event_converter.c_convert_keycode.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_event_converter.c_convert_keycode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KMOD_LALT = common dso_local global i32 0, align 4
@KMOD_RALT = common dso_local global i32 0, align 4
@KMOD_LGUI = common dso_local global i32 0, align 4
@KMOD_RGUI = common dso_local global i32 0, align 4
@AKEYCODE_A = common dso_local global i32 0, align 4
@AKEYCODE_B = common dso_local global i32 0, align 4
@AKEYCODE_C = common dso_local global i32 0, align 4
@AKEYCODE_D = common dso_local global i32 0, align 4
@AKEYCODE_DEL = common dso_local global i32 0, align 4
@AKEYCODE_DPAD_DOWN = common dso_local global i32 0, align 4
@AKEYCODE_DPAD_LEFT = common dso_local global i32 0, align 4
@AKEYCODE_DPAD_RIGHT = common dso_local global i32 0, align 4
@AKEYCODE_DPAD_UP = common dso_local global i32 0, align 4
@AKEYCODE_E = common dso_local global i32 0, align 4
@AKEYCODE_ENTER = common dso_local global i32 0, align 4
@AKEYCODE_ESCAPE = common dso_local global i32 0, align 4
@AKEYCODE_F = common dso_local global i32 0, align 4
@AKEYCODE_FORWARD_DEL = common dso_local global i32 0, align 4
@AKEYCODE_G = common dso_local global i32 0, align 4
@AKEYCODE_H = common dso_local global i32 0, align 4
@AKEYCODE_I = common dso_local global i32 0, align 4
@AKEYCODE_J = common dso_local global i32 0, align 4
@AKEYCODE_K = common dso_local global i32 0, align 4
@AKEYCODE_L = common dso_local global i32 0, align 4
@AKEYCODE_M = common dso_local global i32 0, align 4
@AKEYCODE_MOVE_END = common dso_local global i32 0, align 4
@AKEYCODE_MOVE_HOME = common dso_local global i32 0, align 4
@AKEYCODE_N = common dso_local global i32 0, align 4
@AKEYCODE_NUMPAD_ENTER = common dso_local global i32 0, align 4
@AKEYCODE_O = common dso_local global i32 0, align 4
@AKEYCODE_P = common dso_local global i32 0, align 4
@AKEYCODE_PAGE_DOWN = common dso_local global i32 0, align 4
@AKEYCODE_PAGE_UP = common dso_local global i32 0, align 4
@AKEYCODE_Q = common dso_local global i32 0, align 4
@AKEYCODE_R = common dso_local global i32 0, align 4
@AKEYCODE_S = common dso_local global i32 0, align 4
@AKEYCODE_SPACE = common dso_local global i32 0, align 4
@AKEYCODE_T = common dso_local global i32 0, align 4
@AKEYCODE_TAB = common dso_local global i32 0, align 4
@AKEYCODE_U = common dso_local global i32 0, align 4
@AKEYCODE_V = common dso_local global i32 0, align 4
@AKEYCODE_W = common dso_local global i32 0, align 4
@AKEYCODE_X = common dso_local global i32 0, align 4
@AKEYCODE_Y = common dso_local global i32 0, align 4
@AKEYCODE_Z = common dso_local global i32 0, align 4
@FAIL = common dso_local global i32 0, align 4
@SDLK_BACKSPACE = common dso_local global i32 0, align 4
@SDLK_DELETE = common dso_local global i32 0, align 4
@SDLK_DOWN = common dso_local global i32 0, align 4
@SDLK_END = common dso_local global i32 0, align 4
@SDLK_ESCAPE = common dso_local global i32 0, align 4
@SDLK_HOME = common dso_local global i32 0, align 4
@SDLK_KP_ENTER = common dso_local global i32 0, align 4
@SDLK_LEFT = common dso_local global i32 0, align 4
@SDLK_PAGEDOWN = common dso_local global i32 0, align 4
@SDLK_PAGEUP = common dso_local global i32 0, align 4
@SDLK_RETURN = common dso_local global i32 0, align 4
@SDLK_RIGHT = common dso_local global i32 0, align 4
@SDLK_SPACE = common dso_local global i32 0, align 4
@SDLK_TAB = common dso_local global i32 0, align 4
@SDLK_UP = common dso_local global i32 0, align 4
@SDLK_a = common dso_local global i32 0, align 4
@SDLK_b = common dso_local global i32 0, align 4
@SDLK_c = common dso_local global i32 0, align 4
@SDLK_d = common dso_local global i32 0, align 4
@SDLK_e = common dso_local global i32 0, align 4
@SDLK_f = common dso_local global i32 0, align 4
@SDLK_g = common dso_local global i32 0, align 4
@SDLK_h = common dso_local global i32 0, align 4
@SDLK_i = common dso_local global i32 0, align 4
@SDLK_j = common dso_local global i32 0, align 4
@SDLK_k = common dso_local global i32 0, align 4
@SDLK_l = common dso_local global i32 0, align 4
@SDLK_m = common dso_local global i32 0, align 4
@SDLK_n = common dso_local global i32 0, align 4
@SDLK_o = common dso_local global i32 0, align 4
@SDLK_p = common dso_local global i32 0, align 4
@SDLK_q = common dso_local global i32 0, align 4
@SDLK_r = common dso_local global i32 0, align 4
@SDLK_s = common dso_local global i32 0, align 4
@SDLK_t = common dso_local global i32 0, align 4
@SDLK_u = common dso_local global i32 0, align 4
@SDLK_v = common dso_local global i32 0, align 4
@SDLK_w = common dso_local global i32 0, align 4
@SDLK_x = common dso_local global i32 0, align 4
@SDLK_y = common dso_local global i32 0, align 4
@SDLK_z = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32)* @convert_keycode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_keycode(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %9 [
  ]

9:                                                ; preds = %3
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @KMOD_LALT, align 4
  %12 = load i32, i32* @KMOD_RALT, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @KMOD_LGUI, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @KMOD_RGUI, align 4
  %17 = or i32 %15, %16
  %18 = and i32 %10, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %9
  store i32 0, i32* %4, align 4
  br label %23

21:                                               ; preds = %9
  %22 = load i32, i32* %5, align 4
  switch i32 %22, label %23 [
  ]

23:                                               ; preds = %20, %21
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
